
syntax = "proto3";

option go_package = "./helloservice";

package helloservice;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  int64 times = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
